Fix more warnings